# ReFlex.AI

./: .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
configs/: default.yaml  example.yaml
docs/: architecture.md  configuration.md
examples/: quickstart.py
src/reflex/: __init__.py  cli.py  config.py  errors.py  logging.py  types.py
src/reflex/core/: __init__.py  orchestrator.py  policy.py
src/reflex/embeddings/: __init__.py  base.py  hashing.py  sentence_transformers.py
src/reflex/eval/: __init__.py  harness.py
src/reflex/integrity/: __init__.py  guard.py
src/reflex/llm/: __init__.py  base.py  mock.py  openai_compatible.py
src/reflex/memory/: __init__.py  archive.py  db.py  episodic.py  manager.py  semantic.py  short_term.py  vector_index.py
src/reflex/reflection/: __init__.py  engine.py
src/reflex/runtime/: __init__.py  agent.py
tests/: conftest.py  test_agent.py  test_cli.py  test_config.py  test_embeddings.py  test_eval.py  test_integrity.py  test_llm.py  test_memory_manager.py  test_memory_stores.py  test_reflection.py  test_short_term.py  test_types.py  test_vector_index.py
