[build-system]
requires = ["hatchling>=1.21"]
build-backend = "hatchling.build"

[project]
name = "reflex-memory"
dynamic = ["version"]
description = "Persistent cognitive architecture for long-running AI agents: tiered memory, a closed cognition loop, and an integrity layer."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
authors = [{ name = "ReFlex.AI" }]
keywords = [
    "ai",
    "agents",
    "memory",
    "llm",
    "cognitive-architecture",
    "long-context",
    "rocm",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Typing :: Typed",
]
dependencies = [
    "pydantic>=2.6,<3",
    "numpy>=1.24",
    "PyYAML>=6.0",
    "typer>=0.12",
    "rich>=13.0",
    "httpx>=0.27",
]

[project.optional-dependencies]
# Real LLM/embedding backends for AMD Instinct / ROCm deployments.
faiss = ["faiss-cpu>=1.8"]
embeddings = ["sentence-transformers>=2.7"]
postgres = ["psycopg[binary]>=3.1"]
serve = ["fastapi>=0.110", "uvicorn>=0.29"]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "ruff>=0.5",
    "mypy>=1.10",
    "types-PyYAML>=6.0",
]
all = ["reflex-memory[faiss,embeddings,postgres,serve]"]

[project.urls]
Homepage = "https://github.com/steavehirramsan/ReFlex.AI"
Repository = "https://github.com/steavehirramsan/ReFlex.AI"
Documentation = "https://github.com/steavehirramsan/ReFlex.AI/tree/main/docs"

[project.scripts]
reflex = "reflex.cli:app"

[tool.hatch.version]
path = "src/reflex/version.py"

[tool.hatch.build.targets.wheel]
packages = ["src/reflex"]

[tool.hatch.build.targets.sdist]
include = ["src/reflex", "configs", "docs", "tests", "README.md", "LICENSE"]

# ---------------------------------------------------------------------------
# Tooling
# ---------------------------------------------------------------------------
[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "C4", "SIM", "RUF", "PTH", "ASYNC"]
ignore = [
    "B008", # function call in default argument (typer relies on this)
    "RUF012", # mutable class attrs need ClassVar — pydantic handles validation
    "RUF001", # we use typographic glyphs (curly quotes, arrows) deliberately in UI/prompts
    "RUF002",
    "RUF003",
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["E501"]

[tool.ruff.lint.isort]
known-first-party = ["reflex"]

[tool.mypy]
python_version = "3.11"
plugins = ["pydantic.mypy"]
strict = true
warn_unused_ignores = true
disallow_untyped_defs = true
ignore_missing_imports = true
files = ["src/reflex"]

[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-ra --strict-markers --strict-config"
testpaths = ["tests"]
asyncio_mode = "auto"
filterwarnings = ["error"]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: requires optional/network backends",
]

[tool.coverage.run]
branch = true
source = ["reflex"]
omit = ["*/cli.py"]

[tool.coverage.report]
show_missing = true
skip_covered = true
exclude_lines = [
    "pragma: no cover",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
    "@(abc\\.)?abstractmethod",
    "\\.\\.\\.",
]
